--- a/pages/signup.ejs
+++ b/pages/signup.ejs
@@ -27,7 +27,7 @@
                     </div>
                     <div class="input-control">
                         <a href="#" class="text text-links">Forgot Password</a>
-                        <input type="submit" name="submit" class="input-submit" value="Sign In">
+                        <input type="submit" name="submit" class="input-submit" value="Sign Up">
                     </div>
                 </form>
                 <div class="striped">
